parameter tunning para lgb

--- a/feature_selection.ipynb
+++ b/feature_selection.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1121,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_selected_dataframe_2(df, precio=True, aniomes=False):\n",
+    "    features = feature_generation.get_features()\n",
+    "    \n",
+    "    base = ['antiguedad', 'habitaciones', 'garages', 'banos', 'metroscubiertos', 'metrostotales',\n",
+    "           'idzona', 'lat', 'lng', 'gimnasio', 'usosmultiples', 'piscina', 'escuelascercanas',\n",
+    "           'centroscomercialescercanos']\n",
+    "    \n",
+    "    selection = {'metros':[0,1,2,3],\n",
+    "                 'tipodepropiedad':[2,3],\n",
+    "                 'provincia':[0,3,4],\n",
+    "                 'ciudad':[1,2,3],\n",
+    "                 'fecha':[5,6],\n",
+    "                 'descripcion':[0,1,4,5,6,8],\n",
+    "                 'metricas':[0,1],\n",
+    "                 'habitaciones':[0],\n",
+    "                 'antiguedad':[0],\n",
+    "                 'extras':[1,3],\n",
+    "                 'volcanes':[0],\n",
+    "                 'idzona':[0,1,4],\n",
+    "                 #'class':[0,1],\n",
+    "                 #'otros':[0,1],\n",
+    "                 'metrocuadrado':[0]\n",
+    "                }\n",
+    "    append = []\n",
+    "    \n",
+    "    for categoria in selection.keys():\n",
+    "        for opcion in selection[categoria]:\n",
+    "            append += features[categoria][opcion]\n",
+    "    \n",
+    "    if precio:\n",
+    "        append += ['precio']\n",
+    "    \n",
+    "    if aniomes:\n",
+    "        append += ['aniomes']\n",
+    "    \n",
+    "    return df[base + append]    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1189,8 @@
     "                 'volcanes':[0],\n",
     "                 'idzona':[0,1,4],\n",
     "                 #'class':[0,1],\n",
-    "                 #'otros':[0,1]\n",
+    "                 #'otros':[0,1],\n",
+    "                 'metrocuadrado':[0]\n",
     "                }\n",
     "    append = []\n",
     "    \n",
