--- a/main.ipynb
+++ b/main.ipynb
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,33 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params = {\n",
-    "    'boosting_type': 'gbdt',\n",
-    "    'objective': 'regression',\n",
-    "    'metric': 'mae',\n",
-    "    # Prevenir overfitting:\n",
-    "    'max_bin': 100,\n",
-    "    'num_leaves': 120,\n",
-    "    'min_data_in_leaf':5000,\n",
-    "    'bagging_fraction':0.605,\n",
-    "    'bagging_freq': 3,\n",
-    "    'feature_fraction': 0.7,\n",
-    "    'min_gain_to_split':0.1,\n",
-    "    # Parametros grales:\n",
-    "    'max_depth': 12,\n",
-    "    'learning_rate': 0.05,\n",
-    "    'verbose': 0, \n",
-    "    'early_stopping_round': 1000}\n",
-    "n_estimators=99999999"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,16 +782,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_selected = feature_selection.get_selected_dataframe(train)"
+    "train_selected = feature_selection.get_selected_dataframe(train)\n",
+    "train_selected_2 = feature_selection.get_selected_dataframe_2(train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'num_leaves': 55,\n",
+       " 'min_gain_to_split': 0.2,\n",
+       " 'min_data_in_leaf': 3000,\n",
+       " 'max_depth': 12,\n",
+       " 'max_bin': 150,\n",
+       " 'feature_fraction': 0.7,\n",
+       " 'bagging_freq': 5,\n",
+       " 'bagging_fraction': 0.75,\n",
+       " 'boosting_type': 'gbdt',\n",
+       " 'objective': 'regression',\n",
+       " 'metric': 'mae',\n",
+       " 'num_boost_round': 5000,\n",
+       " 'verbose': 0,\n",
+       " 'learning_rate': 0.1}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = parameter_tuning.get_best_params_lgb()\n",
+    "params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Realizamos algunas modificaciones...\n",
+    "\n",
+    "params['learning_rate'] = 0.05\n",
+    "#params['num_leaves'] = 55\n",
+    "params['min_gain_to_split'] = 0.05\n",
+    "#params['max_depth'] = 12\n",
+    "\n",
+    "params['num_boost_round'] = 20000\n",
+    "params['early_stopping_round'] = 500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,26 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-11-27 19:35:24.278748\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(datetime.now())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -857,6 +866,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/usr/local/lib/python3.6/dist-packages/lightgbm/engine.py:148: UserWarning: Found `num_boost_round` in params. Will use it instead of argument\n",
+      "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n",
       "/usr/local/lib/python3.6/dist-packages/lightgbm/engine.py:153: UserWarning: Found `early_stopping_round` in params. Will use it instead of argument\n",
       "  warnings.warn(\"Found `{}` in params. Will use it instead of argument\".format(alias))\n"
      ]
@@ -865,124 +876,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training until validation scores don't improve for 1000 rounds\n",
-      "[500]\ttraining's l1: 0.213136\tvalid_0's l1: 0.214525\n",
-      "[1000]\ttraining's l1: 0.20647\tvalid_0's l1: 0.208747\n",
-      "[1500]\ttraining's l1: 0.2028\tvalid_0's l1: 0.205831\n",
-      "[2000]\ttraining's l1: 0.200274\tvalid_0's l1: 0.203974\n",
-      "[2500]\ttraining's l1: 0.19836\tvalid_0's l1: 0.202622\n",
-      "[3000]\ttraining's l1: 0.196984\tvalid_0's l1: 0.201671\n",
-      "[3500]\ttraining's l1: 0.195789\tvalid_0's l1: 0.200955\n",
-      "[4000]\ttraining's l1: 0.194816\tvalid_0's l1: 0.200341\n",
-      "[4500]\ttraining's l1: 0.193961\tvalid_0's l1: 0.199806\n",
-      "[5000]\ttraining's l1: 0.193248\tvalid_0's l1: 0.1994\n",
-      "[5500]\ttraining's l1: 0.192529\tvalid_0's l1: 0.199025\n",
-      "[6000]\ttraining's l1: 0.191979\tvalid_0's l1: 0.19869\n",
-      "[6500]\ttraining's l1: 0.191367\tvalid_0's l1: 0.19846\n",
-      "[7000]\ttraining's l1: 0.190866\tvalid_0's l1: 0.198202\n",
-      "[7500]\ttraining's l1: 0.190411\tvalid_0's l1: 0.197928\n",
-      "[8000]\ttraining's l1: 0.189964\tvalid_0's l1: 0.197746\n",
-      "[8500]\ttraining's l1: 0.18955\tvalid_0's l1: 0.197565\n",
-      "[9000]\ttraining's l1: 0.189168\tvalid_0's l1: 0.197321\n",
-      "[9500]\ttraining's l1: 0.188786\tvalid_0's l1: 0.197167\n",
-      "[10000]\ttraining's l1: 0.188406\tvalid_0's l1: 0.197018\n",
-      "[10500]\ttraining's l1: 0.18809\tvalid_0's l1: 0.196876\n",
-      "[11000]\ttraining's l1: 0.187757\tvalid_0's l1: 0.196728\n",
-      "[11500]\ttraining's l1: 0.18744\tvalid_0's l1: 0.196555\n",
-      "[12000]\ttraining's l1: 0.187125\tvalid_0's l1: 0.196413\n",
-      "[12500]\ttraining's l1: 0.186855\tvalid_0's l1: 0.19629\n",
-      "[13000]\ttraining's l1: 0.18659\tvalid_0's l1: 0.196213\n",
-      "[13500]\ttraining's l1: 0.186317\tvalid_0's l1: 0.196127\n",
-      "[14000]\ttraining's l1: 0.186084\tvalid_0's l1: 0.196024\n",
-      "[14500]\ttraining's l1: 0.185848\tvalid_0's l1: 0.195935\n",
-      "[15000]\ttraining's l1: 0.185582\tvalid_0's l1: 0.195827\n",
-      "[15500]\ttraining's l1: 0.185355\tvalid_0's l1: 0.195716\n",
-      "[16000]\ttraining's l1: 0.185153\tvalid_0's l1: 0.195678\n",
-      "[16500]\ttraining's l1: 0.184943\tvalid_0's l1: 0.19558\n",
-      "[17000]\ttraining's l1: 0.184705\tvalid_0's l1: 0.195465\n",
-      "[17500]\ttraining's l1: 0.184474\tvalid_0's l1: 0.195387\n",
-      "[18000]\ttraining's l1: 0.184263\tvalid_0's l1: 0.195321\n",
-      "[18500]\ttraining's l1: 0.184082\tvalid_0's l1: 0.195259\n",
-      "[19000]\ttraining's l1: 0.183912\tvalid_0's l1: 0.195221\n",
-      "[19500]\ttraining's l1: 0.183723\tvalid_0's l1: 0.195136\n",
-      "[20000]\ttraining's l1: 0.183555\tvalid_0's l1: 0.195093\n",
-      "[20500]\ttraining's l1: 0.18336\tvalid_0's l1: 0.194994\n",
-      "[21000]\ttraining's l1: 0.183194\tvalid_0's l1: 0.194971\n",
-      "[21500]\ttraining's l1: 0.183025\tvalid_0's l1: 0.194887\n",
-      "[22000]\ttraining's l1: 0.182859\tvalid_0's l1: 0.194807\n",
-      "[22500]\ttraining's l1: 0.182691\tvalid_0's l1: 0.194737\n",
-      "[23000]\ttraining's l1: 0.182548\tvalid_0's l1: 0.194709\n",
-      "[23500]\ttraining's l1: 0.18242\tvalid_0's l1: 0.194657\n",
-      "[24000]\ttraining's l1: 0.182274\tvalid_0's l1: 0.194637\n",
-      "[24500]\ttraining's l1: 0.182129\tvalid_0's l1: 0.194594\n",
-      "[25000]\ttraining's l1: 0.181976\tvalid_0's l1: 0.194548\n",
-      "[25500]\ttraining's l1: 0.181848\tvalid_0's l1: 0.194508\n",
-      "[26000]\ttraining's l1: 0.181679\tvalid_0's l1: 0.194444\n",
-      "[26500]\ttraining's l1: 0.181557\tvalid_0's l1: 0.194409\n",
-      "[27000]\ttraining's l1: 0.18144\tvalid_0's l1: 0.194369\n",
-      "[27500]\ttraining's l1: 0.181308\tvalid_0's l1: 0.194319\n",
-      "[28000]\ttraining's l1: 0.181175\tvalid_0's l1: 0.194243\n",
-      "[28500]\ttraining's l1: 0.181058\tvalid_0's l1: 0.194221\n",
-      "[29000]\ttraining's l1: 0.180918\tvalid_0's l1: 0.194183\n",
-      "[29500]\ttraining's l1: 0.180803\tvalid_0's l1: 0.194178\n",
-      "[30000]\ttraining's l1: 0.180693\tvalid_0's l1: 0.194162\n",
-      "[30500]\ttraining's l1: 0.180639\tvalid_0's l1: 0.194136\n",
-      "[31000]\ttraining's l1: 0.180639\tvalid_0's l1: 0.194136\n",
+      "Training until validation scores don't improve for 500 rounds\n",
+      "[500]\ttraining's l1: 0.202885\tvalid_0's l1: 0.205594\n",
+      "[1000]\ttraining's l1: 0.195962\tvalid_0's l1: 0.200548\n",
+      "[1500]\ttraining's l1: 0.191739\tvalid_0's l1: 0.198041\n",
+      "[2000]\ttraining's l1: 0.188619\tvalid_0's l1: 0.196414\n",
+      "[2500]\ttraining's l1: 0.186125\tvalid_0's l1: 0.195169\n",
+      "[3000]\ttraining's l1: 0.1841\tvalid_0's l1: 0.194349\n",
+      "[3500]\ttraining's l1: 0.182349\tvalid_0's l1: 0.193672\n",
+      "[4000]\ttraining's l1: 0.180871\tvalid_0's l1: 0.193178\n",
+      "[4500]\ttraining's l1: 0.179505\tvalid_0's l1: 0.192806\n",
+      "[5000]\ttraining's l1: 0.178302\tvalid_0's l1: 0.192356\n",
+      "[5500]\ttraining's l1: 0.177181\tvalid_0's l1: 0.19203\n",
+      "[6000]\ttraining's l1: 0.176173\tvalid_0's l1: 0.191759\n",
+      "[6500]\ttraining's l1: 0.175259\tvalid_0's l1: 0.191458\n",
+      "[7000]\ttraining's l1: 0.174452\tvalid_0's l1: 0.191299\n",
+      "[7500]\ttraining's l1: 0.173669\tvalid_0's l1: 0.191054\n",
+      "[8000]\ttraining's l1: 0.172922\tvalid_0's l1: 0.190922\n",
+      "[8500]\ttraining's l1: 0.172267\tvalid_0's l1: 0.190774\n",
+      "[9000]\ttraining's l1: 0.171677\tvalid_0's l1: 0.190652\n",
+      "[9500]\ttraining's l1: 0.171117\tvalid_0's l1: 0.19056\n",
+      "[10000]\ttraining's l1: 0.170582\tvalid_0's l1: 0.190438\n",
+      "[10500]\ttraining's l1: 0.170059\tvalid_0's l1: 0.190343\n",
+      "[11000]\ttraining's l1: 0.169534\tvalid_0's l1: 0.190246\n",
+      "[11500]\ttraining's l1: 0.169061\tvalid_0's l1: 0.190166\n",
+      "[12000]\ttraining's l1: 0.168575\tvalid_0's l1: 0.190118\n",
+      "[12500]\ttraining's l1: 0.168164\tvalid_0's l1: 0.190077\n",
+      "[13000]\ttraining's l1: 0.167756\tvalid_0's l1: 0.189924\n",
+      "[13500]\ttraining's l1: 0.167365\tvalid_0's l1: 0.189937\n",
+      "[14000]\ttraining's l1: 0.166974\tvalid_0's l1: 0.18986\n",
+      "[14500]\ttraining's l1: 0.166613\tvalid_0's l1: 0.18981\n",
+      "[15000]\ttraining's l1: 0.16627\tvalid_0's l1: 0.189744\n",
+      "[15500]\ttraining's l1: 0.165895\tvalid_0's l1: 0.189707\n",
+      "[16000]\ttraining's l1: 0.165541\tvalid_0's l1: 0.189647\n",
+      "[16500]\ttraining's l1: 0.16523\tvalid_0's l1: 0.189634\n",
       "Early stopping, best iteration is:\n",
-      "[30149]\ttraining's l1: 0.18064\tvalid_0's l1: 0.194127\n"
+      "[16395]\ttraining's l1: 0.165289\tvalid_0's l1: 0.189602\n",
+      "CPU times: user 35min 22s, sys: 14.1 s, total: 35min 37s\n",
+      "Wall time: 11min 9s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "d_train = lgb.Dataset(X_train.values, label=Y_train.values)\n",
     "d_valid = lgb.Dataset(X_val.values, label=Y_val.values)\n",
     "watchlist = [d_valid, d_train]\n",
-    "reg = lgb.train(params, d_train, n_estimators, watchlist, verbose_eval=500)"
+    "reg = lgb.train(params, d_train, valid_sets=watchlist, verbose_eval=500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-11-27 19:44:47.102832\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(datetime.now())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y_pred = reg.predict(X_val.values)\n",
-    "\n",
-    "f = np.vectorize(math.exp)\n",
-    "Y_pred = f(Y_pred)\n",
-    "Y_val = f(Y_val.values)\n",
-    "mean_absolute_error(Y_val,Y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "488561.10936908884"
+       "478382.155793852"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,9 +952,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "415455.8608714994"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Y_pred = reg.predict(X_train.values)\n",
     "\n",
@@ -1055,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -4117,7 +4082,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
